package org.example.spaceflight.simulation;

/** Target center/range values for each vital sign, computed per tick from phase and mode. */
class PhaseTarget {
    double bpmCenter,  spo2Center,  sysCenter,  diasCenter,  respCenter;
    double bpmRange,   spo2Range,   sysRange,   diasRange,   respRange;
}
