@startuml uml-simulation-only-corrected
title Simulation Package

skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam packageFontSize 13
skinparam ArrowColor #555555
skinparam ClassBorderColor #888888
skinparam ClassBackgroundColor #FAFAFA
skinparam InterfaceBackgroundColor #E8F4FD

package "simulation" {

    interface SimulationService {
        +start(config: SimulationConfig): void
        +pause(): void
        +resume(): void
        +stop(): void
        +setSpeed(multiplier: double): void
        +isRunning(): boolean
        +isPaused(): boolean
        +addTickListener(listener: TickListener): void
    }

    interface "SimulationService.TickListener" as TickListener {
        +onTick(tickCount: long): void
    }

    class DefaultSimulationService

    interface FlightSimulationService {
        +update(tickCount: long): void
        +emergencyLanding(): void
        +isEmergencyLanding(): boolean
        +getCurrentState(): ShuttleState
        +setOnEmergencyLanded(callback: Runnable): void
        +getEmergencyProgress(): double
    }

    class DefaultFlightSimulationService {
        +DefaultFlightSimulationService()
    }

    interface VitalSignsGenerator {
        +generateNext(passenger: Passenger, phase: FlightPhase): VitalSigns
        +configure(tickIntervalMs: int): void
        +markAsEmergency(passengerName: String, totalFlightTicks: long): void
    }

    class DefaultVitalSignsGenerator {
        +DefaultVitalSignsGenerator()
        +DefaultVitalSignsGenerator(targetProvider: IVitalTargetProvider)
    }

    interface IVitalTargetProvider {
        +buildTarget(profile: PersonalProfile, phase: FlightPhase, mode: ExperienceMode, emergency: boolean): PhaseTarget
    }

    class DefaultVitalTargetProvider

    interface ExperienceModeService {
        +changeMode(passenger: Passenger, newMode: ExperienceMode): void
    }

    class DefaultExperienceModeService

    class PersonalProfile <<package-private>> {
        ~baseBpm: int
        ~baseSpO2: double
        ~baseSystolic: int
        ~baseDiastolic: int
        ~baseResp: int
        ~PersonalProfile(p: Passenger)
    }

    class PhaseTarget <<package-private>> {
        ~bpmCenter: double
        ~spo2Center: double
        ~sysCenter: double
        ~diasCenter: double
        ~respCenter: double
        ~bpmRange: double
        ~spo2Range: double
        ~sysRange: double
        ~diasRange: double
        ~respRange: double
    }

    class HeadlessSimulationRunner {
        +main(args: String[]): void
        +run(): void
        -markEmergencyPassengers(generator: VitalSignsGenerator, persons: List<Passenger>, count: int, totalTicks: long): List<String>
    }

    class SimulationObserver {
        +init(passengers: List<Passenger>): void
        +record(passengers: List<Passenger>, phase: FlightPhase, tick: long): void
        +printReport(): void
        +printReport(emergencyPassengerNames: List<String>): void
        -pct(part: int, total: int): double
    }

    class "SimulationObserver.StatusSnapshot" as StatusSnapshot <<record>> <<package-private>> {
        ~tick: long
        ~phase: FlightPhase
        ~status: HealthStatus
    }
}

SimulationService +-- TickListener : nested
SimulationObserver +-- StatusSnapshot : nested record

DefaultSimulationService ..|> SimulationService
DefaultFlightSimulationService ..|> FlightSimulationService
DefaultVitalSignsGenerator ..|> VitalSignsGenerator
DefaultVitalTargetProvider ..|> IVitalTargetProvider
DefaultExperienceModeService ..|> ExperienceModeService

DefaultSimulationService --> TickListener : notifies
DefaultFlightSimulationService --> ShuttleState : owns / returns
DefaultVitalSignsGenerator --> IVitalTargetProvider : uses
DefaultVitalSignsGenerator --> PersonalProfile : creates / uses
DefaultVitalSignsGenerator --> PhaseTarget : uses
DefaultVitalTargetProvider --> PersonalProfile : reads
DefaultVitalTargetProvider --> PhaseTarget : creates
HeadlessSimulationRunner --> DefaultFlightSimulationService : uses
HeadlessSimulationRunner --> DefaultVitalSignsGenerator : uses
HeadlessSimulationRunner --> SimulationObserver : uses

@enduml
